Creato con Colab

--- a/01_BasicPandas.ipynb
+++ b/01_BasicPandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5cFAN/OKUoApm6raAFak5",
+      "authorship_tag": "ABX9TyMtoIuCh9YqHR6y4bO3GHWt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,29 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/ggosti/PythonDataVisualization4Archaeologists/blob/main/01_BasicPandas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "udKGkPf1mTa_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cd /content/drive/MyDrive/LabNN4A/"
+      ],
+      "metadata": {
+        "id": "aA6BPsVwmUh_"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
